Bug 114477 - Can't set character highlighting on a text box using sidebar highlighting icon.
Summary: Can't set character highlighting on a text box using sidebar highlighting icon.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-14 23:54 UTC by Tamás Zolnai
Modified: 2018-01-15 14:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-12-14 23:54:37 UTC
Description:
In Impress when we try to set character highlighting on a text box using the sidebar, it has no effect at all. When I do the same from character properties dialog it works. When you change text color from sidebar it also works. So highlighting also should work.

Steps to Reproduce:
1. Open a new impress document
2. Write some text inside title shape
3. Select title shape (not the text inside it)
4. Click highlighting icon on sidebar

Actual Results:  
Highlighting is not applied on the text.

Expected Results:
Highlighting should be applied on the text.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Comment 1 Commit Notification 2017-12-15 05:01:40 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1f0de010f041a9340b2d32d3fef010954be9a32

tdf#114477: Can't set character highlighting on a text box using sidebar

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.