tdf#114477: Can't set character highlighting on a text box using sidebar

Change-Id: I9ef9d6dacc87fb26351eae5eaedd72fd0a081672
Reviewed-on: https://gerrit.libreoffice.org/46494
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit b1f0de010f041a9340b2d32d3fef010954be9a32)
Reviewed-on: https://gerrit.libreoffice.org/46498
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>