sd/source/ui/view/drviews2.cxx
@@ -3108,6 +3108,16 @@ void DrawViewShell::ExecChar( SfxRequest &rReq )
             }
             break;
         }
+    case SID_ATTR_CHAR_BACK_COLOR:
+        if( rReq.GetArgs() )
+        {
+            const SvxBackgroundColorItem* pItem = rReq.GetArg<SvxBackgroundColorItem>(SID_ATTR_CHAR_BACK_COLOR);
+            if (pItem)
+            {
+                aNewAttr.Put(*pItem);
+            }
+        }
+        break;
     default:
         break;
     }
